[tool.poetry]
name = "python-web-hw11"
version = "0.1.0"
description = ""
authors = ["Roman <Tesmail@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
alembic = "^1.13.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
