[tool.poetry]
name = "python-web-hw11"
version = "0.1.0"
description = ""
authors = ["Roman <Tesmail@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
fastapi-jwt-auth = "^0.5.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
asyncpg = "^0.29.0"
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
